	  bar button

27/03/2002 Michael Goffioul <goffioul@imec.be>
  * general: created a separate "Fonts" section in the KDEPrint settings
    dialog and removed the "Embed Fonts" option from the general section
    (moved to the new section).
  * kdeprintfax: fixed disabled background for "Comment" widget, use QBrush
    instead of QColor. OK with styles like Liquid.

28/03/2002 Michael Goffioul <goffioul@imec.be>
  * general: added a user feedback mechanism in the form of a dialog showgin
    status messages, including initialization, number of the page currently
    generated, filtering and sending to the printer.

29/03/2002 Michael Goffioul <goffioul@imec.be>
  * general: enhanced the status feedback mechanism
  	. possibility to have multiple status boxes (one for each app)
	. added an icon (eye-candy) and the document name being printed
	. made it configurable in the options dialog
  * general: possibility to use the default printer on first print instead
    of the last printer used. Configurable in the options dialog. Now, I
    should probably re-add the "Set as default" button.
  * print dialog: re-added the "Set as default" button in the case the
    user default printer is used on first print instead of the last used
    printer (it does make sense again to have it)
  * general: added a small (but useful) information string about the
    current plugin below the plugin combobox (ex: in CUPS, shows the current
    server:port).

02/04/2002 Michael Goffioul <goffioul@imec.be>
  * general:
  	. fixed various conflicting shortcuts
	. made KMVirtualManager inherit from KPReloadObject to force instance
	  reloading when something has changed
  * print dialog: added buttons to move files up and down
  * CUPS: added a generic job tagging mechanism in the form of an additional
    tab in the print dialog. It contain a 2-columns table where custom tags
    can be added. Read-only in job editing mode (hope to change that soon).